--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Run APIdog tests and generate htmlextra report
+name: Run APIdog tests and generate HTML report
 on: 
   workflow_dispatch:
 
@@ -18,30 +18,22 @@ jobs:
       - name: Install Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '20'
+          node-version: '14'
       
       - name: Install APIdog CLI
         run: npm install -g apidog-cli
       
       - name: Run APIdog tests and generate HTML report
         run: |
-          apidog run https://api.apidog.com/api/v1/projects/455055/api-test/ci-config/349133/detail?token=x3TW6wfE-41UZYJuI8PTqk -r json
-          
-      - name: Install Newman and htmlextra reporter
-        run: |
-          npm install -g newman newman-reporter-htmlextra
-      
-      - name: Convert JSON report to htmlextra format
-        run: |
-          newman run ${{ github.workspace }}/apidog-reports/*.json -r htmlextra --reporter-htmlextra-export ${{ github.workspace }}/testArtifacts/htmlextra-report.html
+          apidog run https://api.apidog.com/api/v1/projects/455055/api-test/ci-config/349133/detail?token=x3TW6wfE-41UZYJuI8PTqk -r html
       
       - name: Output the results
         uses: actions/upload-artifact@v3
         with: 
-          name: htmlextra_report
-          path: ${{ github.workspace }}/testArtifacts/htmlextra-report.html
+          name: Reports
+          path: ${{ github.workspace }}/apidog-reports/
           
-      - name: Send email with htmlextra report
+      - name: Send email with HTML report
         run: node sendEmail.js
         env:
           SENDGRID_API_KEY: ${{ secrets.SENDGRID_API_KEY }}
