--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,39 +1,45 @@
-name: Run APIdog tests and generate HTML report
-on: 
-  workflow_dispatch:
-
+name: Run APIdog Tests and Send Email
+ 
+on:
+  workflow_dispatch
+ 
 jobs:
-  test_and_generate_report:
+  test_and_send_email:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      
+ 
       - name: Install SendGrid library
         run: npm install @sendgrid/mail
-      
-      - name: Create testArtifacts directory
-        run: mkdir -p testArtifacts
-      
+ 
       - name: Install Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '14'
-      
+          node-version: '16' # Upgrade Node.js to version 16 or higher
+ 
       - name: Install APIdog CLI
         run: npm install -g apidog-cli
-      
+ 
+      - name: Install Newman and HTML reporter
+        run: npm install -g newman newman-reporter-htmlextra
+ 
       - name: Run APIdog tests and generate HTML report
-        run: |
-          apidog run https://api.apidog.com/api/v1/projects/455055/api-test/ci-config/349133/detail?token=x3TW6wfE-41UZYJuI8PTqk -r json
-      
-      - name: Output the results
+        run: apidog run https://reqres.in/api/users?page=2 -r json
+ 
+      - name: Upload Artifact
         uses: actions/upload-artifact@v3
-        with: 
-          name: Reports
+        with:
+          name: reports
           path: ${{ github.workspace }}/apidog-reports/
-          
+ 
       - name: Send email with HTML report
         run: node sendEmail.js
         env:
           SENDGRID_API_KEY: ${{ secrets.SENDGRID_API_KEY }}
+ 
+      - name: Archive Newman HTML report
+        uses: actions/upload-artifact@v2
+        with:
+          name: newman-report
+          path: newman-report.html
