--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,9 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '16' # Upgrade Node.js to version 16 or higher
+
+      - name: Update Newman to latest version
+        run: npm install -g newman@latest
  
       - name: Install APIdog CLI
         run: npm install -g apidog-cli@latest
